--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div id="front" class="album">
         <div id="title-box">
 
+          <h4>Pharrell Williams</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
