automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <h4>Pharrell Williams</h4>
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h4>PHARRELL WILLIAMS</h4>
+
           <h2>Happy</h2>
           <!-- Level 2 'HAPPY' Header -->
           <h4>From Despicable Me...</h4>
