--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
           <h4>PHARRELL WILLIAMS</h4>
 
-          <h2>Happy</h2>
+          <h2>HAPPY</h2>
           <!-- Level 2 'HAPPY' Header -->
           <h4>From Despicable Me...</h4>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
