--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
         <div id="title-box">
 
           <h4>PHARRELL WILLIAMS</h4>
-
           <h2>HAPPY</h2>
-          <!-- Level 2 'HAPPY' Header -->
-          <h4>From Despicable Me...</h4>
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h4>| FROM DESPICABLE ME 2 |</h4>
 
         </div>
       </div>
