--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div id="back" class="album">
 
-          <h3>| FROM DESPICABLE ME 2 |</h3>
+          <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         
         <!-- Level 1 'HAPPY' Header -->
 
