--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
           <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         
-        <!-- Level 1 'HAPPY' Header -->
-
+        <h1>HAPPY</h1>
+        <h3></h3>
         <!-- Level 3 'WRITTEN BY...' Header -->
 
         <!-- pararaph text 'PUBLISHED BY...' -->
