--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
           <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         
         <h1>HAPPY</h1>
-        <h3></h3>
-        <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+        <p></p>
         <!-- pararaph text 'PUBLISHED BY...' -->
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
